bdr.BDR.scala.error
Erreur de compilation :
BDR:11: error: not found: value A
  } else if (litMessage() == A) {
                             ^